--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_ROOT_V1=http://127.0.0.1:8000/api/v1/
+REACT_APP_API_ROOT_V1=https://red-monkey-58.loca.lt/api/v1/
 REACT_APP_API_ROOT_V2=http://192.168.0.105:8000/api/v1/
